--- a/provider_config.yml
+++ b/provider_config.yml
@@ -17,7 +17,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/db_springcloud
     username: root
-    password: mysql
+    password: xxxx
   jpa:
     hibernate:
       ddl-auto: update
@@ -54,7 +54,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/db_springcloud2
     username: root
-    password: mysql
+    password: xxxx
   jpa:
     hibernate:
       ddl-auto: update
